--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-awesome-slider": "^2.3.0",
+    "react-clock": "^2.4.0",
     "react-dom": "^16.12.0",
+    "react-live-clock": "^3.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-spring": "^8.0.27",
