--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-awesome-slider": "^2.3.0",
     "react-clock": "^2.4.0",
     "react-dom": "^16.12.0",
+    "react-draggable": "^4.2.0",
     "react-live-clock": "^3.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
