--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-live-clock": "^3.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-scroll-into-view": "^1.8.2",
     "react-spring": "^8.0.27",
     "react-typing-animation": "^1.6.2"
   },
