--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
-    "react-awesome-slider": "^2.3.0",
+    "react-awesome-slider": "4.1.0",
     "react-clock": "^2.4.0",
     "react-dom": "^16.12.0",
     "react-draggable": "^4.2.0",
